--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="text">
-      <h1>Hey ! Listen this is for you 💖....</h1>
+      <h1>Hey ! Listen this is for baby angle 💖....</h1>
     </div>
     <div id="envelope">
       <div id="back">
@@ -85,7 +85,7 @@
         <p>
           You are the person I have been dreaming all my life , so allow me to
           express my intense love for you. You are the most precious thing in my
-          life. You have fascinated my heart and seized my mind with your
+          life suchana. You have fascinated my heart and seized my mind with your
           magnetic presence and I keep dreaming of yourself Your memories are
           invaluable treasure of my life, which are locked inside my heart. The
           time spent with you was the most mesmerizing and delightful of my
